<resources>
    <string name="app_name" translatable="false">DD GUI</string>
    <string name="action_settings">Settings</string>
    <string name="path">path</string>
    <string name="input">Input</string>
    <string name="output">Output</string>
    <string name="options">Options</string>
    <string name="pick">Pick</string>
    <string name="basic">Basic</string>
    <string name="advanced">Advanced</string>
    <string name="conversions">Conversions</string>
    <string name="in_flags">In flags</string>
    <string name="out_flags">Out flags</string>
    <string name="exit">Exit</string>
    <string name="next">Next</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_headline">This application is for experts only!</string>
    <string name="disclaimer1">THIS APPLICATION CAN BE DANGEROUS. Under any circumstances, Android VIP or anyone who contributed to the source code for this application shall have no liability for any damages or losses caused by it.</string>
    <string name="disclaimer2">DD GUI is free and open source software made in hope that it will be useful to someone. By choosing to use this application, you and only you will be responsible for what you do with it.</string>
    <string name="disclaimer_accept">I know what I am doing</string>
    <string name="failed">Failed</string>
    <string name="create">Create</string>
    <string name="root_not_found">Root access not found or denied by superuser app!</string>
    <string name="error_missing_input">Please select an input file</string>
    <string name="error_missing_output">Please select an output file</string>
    <string name="result">Result</string>
    <string name="executing">Executing…</string>
    <string name="finished">Finished</string>
    <string name="new_folder">New folder</string>
    <string name="create_folder_fail">Failed to create folder</string>
    <string name="create_file_fail">Failed to create file</string>
    <string name="new_file">New file</string>
    <string name="ppending_operations_warning">There are operations pending, do you really want to quit now?</string>
    <string name="conversion_no_truncate">Do not truncate output file</string>
    <string name="conversion_no_error">Continue after read errors</string>
    <string name="conversion_sync">Pad blocks with zeros</string>
    <string name="conversionFsync">Physically write data out before finishing</string>
    <string name="conversionSwab">Swap every pair of input bytes</string>
</resources>
