<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.DisclaimerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="36dp"
                android:tint="?attr/colorOnSurface"
                android:src="@drawable/ic_error"
                android:layout_gravity="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="?attr/colorOnSurface"
                android:text="@string/disclaimer"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/disclaimer_headline"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="#cfd8dc"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fontFamily="monospace"
                        android:text="@string/disclaimer1"
                        android:layout_marginTop="24dp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:fontFamily="monospace"
                        android:text="@string/disclaimer2"/>

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/disclaimerAccept"
                android:text="@string/disclaimer_accept"
                android:layout_marginTop="24dp"
                app:fontFamily="monospace"
                android:padding="8dp"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="end"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/disclaimerNext"
            android:text="@string/next"
            android:enabled="false"
            app:fontFamily="monospace"
            android:layout_gravity="bottom|end"/>

    </LinearLayout>

</LinearLayout>